--- a/views/result.html
+++ b/views/result.html
@@ -7,11 +7,7 @@
 
 <body>
    <h1>URL Shortener</h1>
-   <form method="post" action="/shorten">
-      <label for="url">Enter URL to shorten:</label>
-      <input type="text" name="url" id="url" required>
-      <button type="submit">Shorten</button>
-   </form>
+   <p>Shortened URL: <a id="shortcode" target=”_blank” href="{{ shortUrl }}">{{ shortUrl }}</a></p>
 </body>
 
 </html>
