Refac : url redirect

--- a/views/result.html
+++ b/views/result.html
@@ -7,7 +7,7 @@
 
 <body>
    <h1>URL Shortener</h1>
-   <p>Shortened URL: <a id="shortcode" target=”_blank” href="{{ shortUrl }}">{{ shortUrl }}</a></p>
+   <p>Shortened URL: <a id="shortcode" target=”_blank” href="{{ shortUrl }}">{{ base }}{{ shortUrl }}</a></p>
 </body>
 
 </html>
