--- a/views/home.html
+++ b/views/home.html
@@ -3,17 +3,24 @@
 
 <head>
    <title>URL Shortener</title>
-   <link rel="stylesheet" href="home.css">
+   <link rel="stylesheet" href="/css/home.css">
 </head>
 
 <body>
-   <h1>URL Shortener</h1>
-   <form method="post" class="form1" action="/shorten">
-      <label for="url">Enter URL to shorten:</label>
-      <input type="text" name="url" id="url" required>
-      <button type="submit">Shorten</button>
-      {{error}}
-   </form>
+   <main class="main-home">
+      <h1 class=" title ">URL <span>Shortener</span></h1>
+      <form method="post" class="form1" action="/shorten">
+         <label for="url">Paste the URL to be shortened :</label>
+         <div>
+            <input placeholder="Enter the link here : " type="url" name="url" id="url" type="url" required>
+            <button type="submit">Shorten</button>
+         </div>
+         <p>
+            ShortURL is a free tool to shorten URLs and generate short links
+            URL shortener allows to create a shortened link making it easy to share
+         </p>
+      </form>
+   </main>
 </body>
 
 </html>
