--- a/views/result.html
+++ b/views/result.html
@@ -3,11 +3,31 @@
 
 <head>
    <title>URL Shortener</title>
+   <link rel="stylesheet" href="/css/result.css">
 </head>
 
 <body>
-   <h1>URL Shortener</h1>
-   <p>Shortened URL: <a id="shortcode" target=”_blank” href="{{ shortUrl }}">{{ base }}{{ shortUrl }}</a></p>
+   <main class="main-home">
+
+      <form method="post" class="form1" action="/shorten1">
+
+         <div>
+            <h1 class=" title ">URL <span>Shortener</span></h1>
+            <p>The Shortened url is : </p>
+            <div>
+               <input placeholder="Enter the link here : " type="url" value="{{ base }}{{ shortUrl }}" name="url"
+                  disabled id="url" type="url" required>
+               <button type="submit">Copy</button>
+            </div>
+            <p>
+               ShortURL is a free tool to shorten URLs and generate short links
+               URL shortener allows to create a shortened link making it easy to share.
+            </p>
+            <button type="submit">Shorten another URL</button>
+         </div>
+
+      </form>
+   </main>
 </body>
 
 </html>
