--- a/views/result.html
+++ b/views/result.html
@@ -9,7 +9,7 @@
 <body>
    <main class="main-home">
 
-      <form method="post" class="form1" action="/shorten1">
+      <form method="get" class="form1" action="/">
 
          <div>
             <h1 class=" title ">URL <span>Shortener</span></h1>
