--- a/public/css/result.css
+++ b/public/css/result.css
@@ -35,7 +35,8 @@ p {
   justify-content: center;
   align-items: center;
   background: white;
-  height: 20rem;
+  height: 25rem;
+
   width: 50rem;
   border-radius: 5px;
   box-shadow: 1px 1px 20px #e0e0e0;
@@ -101,6 +102,8 @@ p {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border-style: solid;
+  border-right: none;
+
   height: 50px;
   cursor: pointer;
   padding: 10px;
