--- a/public/css/result.css
+++ b/public/css/result.css
@@ -46,7 +46,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   width: 50rem;
   max-width: 80%;
   gap: 15px;
