--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
          <h1 class=" title ">URL <span>Shortener</span></h1>
          <label for="url">Paste the URL to be shortened :</label>
          <div>
-            <input placeholder="Enter the link here : " type="url" name="url" id="url" type="url" required>
+            <input placeholder="Enter the link here : " name="url" id="url" type="url" required>
             <button type="submit">Shorten</button>
          </div>
          <p>
